--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ env_logger = "0.10.0"
 gag = "1.0.0"
 log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_trace"] }
 pyo3 = "0.18.1"
-testing_logger = "0.1.1"
+regex = "1.9.1"
