fancy release docu for v0.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "libpt"
 version = "0.1.0"
 edition = "2021"
 authors = ["Christoph J. Scherr <software@cscherr.de>"]
-license = "GPL3"
-description = "my personal multitool"
+license = "GPL-3.0-or-later"
+description = "Personal multitool"
 readme = "README.md"
 homepage = "https://git.cscherr.de/PlexSheep/pt"
 repository = "https://git.cscherr.de/PlexSheep/pt"
