--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,12 @@ path = "src/bin/main/mod.rs"
 
 [dependencies]
 clap = { version = "4.3.11", features = ["derive"] }
+clap-num = "1.0.2"
 clap-verbosity-flag = "2.0.1"
 env_logger = "0.10.0"
 gag = "1.0.0"
 log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_trace"] }
+num = "0.4.0"
 pyo3 = "0.18.1"
 regex = "1.9.1"
+reqwest = { version = "0.11.18", features = ["blocking"] }
