--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ num = "0.4.0"
 pyo3 = "0.18.1"
 regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["blocking"] }
+signal-hook = "0.3.15"
