--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libpt"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["Christoph J. Scherr <software@cscherr.de>"]
 license = "GPL-3.0-or-later"
@@ -30,6 +30,8 @@ gag = "1.0.0"
 humantime = "2.1.0"
 log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_trace"] }
 num = "0.4.0"
+openssl = "0.10.55"
+openssl-sys = "0.9.90"
 pyo3 = "0.18.1"
 regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["blocking"] }
