--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,6 @@ openssl-sys = "0.9.90"
 pyo3 = "0.18.1"
 regex = "1.9.1"
 reqwest = { version = "0.11.18", features = ["blocking"] }
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.102"
 signal-hook = "0.3.15"
