--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ clap-verbosity-flag = "2.0.1"
 env_logger = "0.10.0"
 gag = "1.0.0"
 humantime = "2.1.0"
-log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_trace"] }
 num = "0.4.0"
 openssl = "0.10.55"
 openssl-sys = "0.9.90"
@@ -38,3 +37,6 @@ reqwest = { version = "0.11.18", features = ["blocking"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.102"
 signal-hook = "0.3.15"
+tracing = "0.1.37"
+tracing-appender = "0.2.2"
+tracing-subscriber = "0.3.17"
