--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ clap-verbosity-flag = "2.0.1"
 env_logger = "0.10.0"
 humantime = "2.1.0"
 num = "0.4.0"
+num-traits = "0.2.16"
 openssl = "0.10.55"
 openssl-sys = "0.9.90"
 pyo3 = "0.18.1"
