--- a/members/pt-log/Cargo.toml
+++ b/members/pt-log/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tracing = "0.1.37"
+tracing-appender = "0.2.2"
+tracing-subscriber = "0.3.17"
+env_logger = "0.10.0"
+
+[dev-dependencies]
+gag = "1.0.0"
