--- a/members/pt-log/Cargo.toml
+++ b/members/pt-log/Cargo.toml
@@ -10,6 +10,7 @@ tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.17"
 env_logger = "0.10.0"
+pyo3 = {workspace = true}
 
 [dev-dependencies]
 gag = "1.0.0"
