--- a/members/pt-log/Cargo.toml
+++ b/members/pt-log/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "pt-log"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+description.workspace = true
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 tracing = "0.1.37"
