--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-	"members/pt",
+	".",
 	"members/pt-core",
 	"members/pt-bintols",
 	"members/pt-math",
@@ -12,7 +12,7 @@ members = [
 	"members/pt-hedu",
 ]
 default-members = [
-	"members/pt",
+	".",
 	"members/pt-bin",
 	"members/pt-core",
 	"members/pt-py",
@@ -34,3 +34,38 @@ categories = ["command-line-utilities", "development-tools", "development-tools:
 
 [workspace.dependencies]
 pyo3 = "0.19"
+
+[package]
+name = "pt"
+publish.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+description.workspace = true
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
+
+[features]
+default = ["core", "log"]
+core 		= []
+math 		= []
+log 		= []
+bintols = []
+net 		= []
+ccc 		= ["math"]
+hedu 		= ["bintols"]
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+pt-bintols = { version = "0.1.0", path = "members/pt-bintols" }
+pt-core = { version = "0.1.0", path = "members/pt-core" }
+pt-hedu = { version = "0.1.0", path = "members/pt-hedu" }
+pt-log = { version = "0.1.0", path = "members/pt-log" }
+pt-math = { version = "0.1.0", path = "members/pt-math" }
+pt-net = { version = "0.1.0", path = "members/pt-net" }
+pt-ccc = { version = "0.1.0", path = "members/pt-ccc" }
