--- a/members/pt-net/Cargo.toml
+++ b/members/pt-net/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "pt-net"
-version = "0.1.0"
-edition = "2021"
+publish.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+description.workspace = true
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
