--- a/members/pt-py/Cargo.toml
+++ b/members/pt-py/Cargo.toml
@@ -1,10 +1,19 @@
 [package]
 name = "pt-py"
-version = "0.1.0"
-edition = "2021"
+publish.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+description.workspace = true
+readme.workspace = true
+homepage.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pt = { version = "0.1.0", path = "../pt" }
+pt = { path = "../../" }
 pyo3 = { workspace = true }
