--- a/members/pt-py/Cargo.toml
+++ b/members/pt-py/Cargo.toml
@@ -15,5 +15,5 @@ categories.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pt = { path = "../../" }
+libpt = { path = "../../" }
 pyo3 = { workspace = true }
