--- a/members/pt-bin/Cargo.toml
+++ b/members/pt-bin/Cargo.toml
@@ -15,4 +15,16 @@ categories.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "ccc"
+path = "src/ccc/mod.rs"
+
+[[bin]]
+name = "pt"
+path = "src/main/mod.rs"
+
 [dependencies]
+clap = { version = "4.4.4", features = ["derive"] }
+clap-num = "1.0.2"
+clap-verbosity-flag = "2.0.1"
+libpt = { version = "0.1.7", path = "../..", features = ["ccc", "math", "hedu", "net"] }
