make things hopefully ready for v0.1.7

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ pyo3 = "0.19"
 
 [package]
 name = "libpt"
-publish.workspace = true
+publish = true
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
