--- a/members/pt-py/Cargo.toml
+++ b/members/pt-py/Cargo.toml
@@ -14,7 +14,7 @@ categories.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "_libpt"
+name = "pt_py"
 crate-type = ["cdylib"]
 
 [dependencies]
