--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,12 @@ members = [
 	"members/libpt-bin",
 	"members/libpt-log",
 	"members/libpt-net",
-	"members/libpt-py",
 	"members/libpt-hedu",
 ]
 default-members = [
 	".",
 	"members/libpt-bin",
 	"members/libpt-core",
-	"members/libpt-py",
-	"members/libpt-log",
-	"members/libpt-math",
 ]
 [workspace.package]
 publish = true
@@ -29,11 +25,10 @@ description = "Personal multitool"
 readme = "README.md"
 homepage = "https://git.cscherr.de/PlexSheep/libpt"
 repository = "https://git.cscherr.de/PlexSheep/libpt"
-keywords = ["cli", "python", "scriptable", "pyo3", "library"]
+keywords = ["cli", "library"]
 categories = ["command-line-utilities", "development-tools", "development-tools::ffi"]
 
 [workspace.dependencies]
-pyo3 = "0.19"
 anyhow = "1.0.79"
 thiserror = "1.0.56"
 
