add log to hedu

--- a/members/libpt-hedu/Cargo.toml
+++ b/members/libpt-hedu/Cargo.toml
@@ -17,3 +17,4 @@ categories.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+libpt-log = {path = "../libpt-log" }
