--- a/members/libpt-ccc/Cargo.toml
+++ b/members/libpt-ccc/Cargo.toml
@@ -17,6 +17,6 @@ categories.workspace = true
 [dependencies]
 num = "0.4.1"
 num-traits = "0.2.16"
-libpt-core = { version = "0.1.7", path = "../libpt-core" }
-libpt-log = { version = "0.1.7", path = "../libpt-log" }
-libpt-math = { version = "0.1.7", path = "../libpt-math" }
+libpt-core = { path = "../libpt-core" }
+libpt-log = { path = "../libpt-log" }
+libpt-math = { path = "../libpt-math" }
