--- a/.gitea/workflows/cargo.yaml
+++ b/.gitea/workflows/cargo.yaml
@@ -2,7 +2,8 @@ name: Cargo Check, Format, Fix and Test
 on:
   push:
     branches:
-      - devel
+      - '**'
+      - '!master'
 
 jobs:
   format:
@@ -12,19 +13,32 @@ jobs:
       # added or changed files to the repository.
       contents: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - run: cargo check --all-features --all-targets
-      - run: rustup component add rustfmt
-      - run: cargo fix --all-features --all-targets
-      - run: cargo fmt --all
-      - run: cargo test --all-features --all-targets
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: get repo
+        uses: actions/checkout@v4
+      - name: install rust
+        uses: dtolnay/rust-toolchain@stable
+        run: rustup component add rustfmt
+      - name: config custom registry
+        run: |
+          mkdir -p ~/.cargo/
+          echo -e '[registry]
+          cscherr= "cscherr"
+
+          [registries.cscherr]
+          index = "sparse+https://git.cscherr.de/api/packages/PlexSheep/cargo/"
+          ' > ~/.cargo/config.toml
+          cat ~/.cargo/config.toml
+      - name: cargo check
+        run: cargo check --all-features --all-targets
+      - name: cargo fix
+        run: cargo fix --all-features --all-targets
+      - name: cargo fmt
+        run: cargo fmt --all
+      - name: cargo test
+        run: cargo test --all-features --all-targets
+      - name: commit back to repository
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           # Optional. Commit message for the created commit.
           # Defaults to "Apply automatic changes"
           commit_message: automatic cargo CI changes
-          commit_user_name: Gitea CI
-          commit_user_email: noreply@cscherr.de
-          commit_author: Gitea CI <noreply@cscherr.de>
-
