--- a/members/libpt-bin/Cargo.toml
+++ b/members/libpt-bin/Cargo.toml
@@ -31,4 +31,11 @@ path = "src/main/mod.rs"
 clap = { version = "4.4.4", features = ["derive"] }
 clap-num = "1.0.2"
 clap-verbosity-flag = "2.0.1"
-libpt = {path = "../..", features = ["default", "ccc", "math", "hedu", "net", "log"] }
+libpt = { version = "0.2.5-alpha.0", path = "../..", features = [
+  "default",
+  "ccc",
+  "math",
+  "hedu",
+  "net",
+  "log",
+] }
