--- a/members/libpt-net/Cargo.toml
+++ b/members/libpt-net/Cargo.toml
@@ -16,9 +16,9 @@ categories.workspace = true
 
 [dependencies]
 humantime = "2.1.0"
-libpt-core = { path = "../libpt-core" }
-libpt-log = { path = "../libpt-log" }
-libpt-math = { path = "../libpt-math" }
+libpt-core = { version = "0.2.5-alpha.0", path = "../libpt-core" }
+libpt-log = { version = "0.2.5-alpha.0", path = "../libpt-log" }
+libpt-math = { version = "0.2.5-alpha.0", path = "../libpt-math" }
 reqwest = { version = "0.11.20", features = ["blocking"] }
 serde = { version = "1.0.188", features = ["serde_derive"] }
 serde_json = "1.0.107"
