--- a/.gitea/workflows/cargo-publish.yaml
+++ b/.gitea/workflows/cargo-publish.yaml
@@ -6,17 +6,27 @@ on:
 
 jobs:
   format:
-    name: cargo CI
-    permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # added or changed files to the repository.
-      contents: write
+    name: cargo CD
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - run: cargo check --all-features --all-targets
-      - run: rustup component add rustfmt
-      - run: cargo fix --all-features --all-targets
-      - run: cargo fmt --all
-      - run: cargo test --all-features --all-targets
-      - run: cargo publish --index "https://git.cscherr.de/PlexSheep/_cargo-index.git --dry-run
+      - run: |
+          echo Registry Token: ${{ secrets.CARGO_PUBLISH_CSCHERR }}
+      - name: get repo
+        uses: actions/checkout@v4
+      - name: install rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: config custom registry
+        run: |
+          mkdir -p ~/.cargo/
+          echo -e '[registry]
+          cscherr= "cscherr"
+
+          [registries.cscherr]
+          index = "sparse+https://git.cscherr.de/api/packages/PlexSheep/cargo/"
+          token = "${{ secrets.CARGO_PUBLISH_CSCHERR }}"
+          ' > ~/.cargo/config.toml
+          cat ~/.cargo/config.toml
+          echo Registry Token: ${{ secrets.CARGO_PUBLISH_CSCHERR }}
+      - name: publish crates on git.cscherr.de
+        uses: katyo/publish-crates@v2
+        with:
+          args: --registry cscherr
