--- a/.gitea/workflows/cargo-publish.yaml
+++ b/.gitea/workflows/cargo-publish.yaml
@@ -26,7 +26,8 @@ jobs:
           ' > ~/.cargo/config.toml
           cat ~/.cargo/config.toml
           echo Registry Token: ${{ secrets.CARGO_PUBLISH_CSCHERR }}
+      - name: install cargo workspace
+        run: cargo install cargo-workspaces
       - name: publish crates on git.cscherr.de
-        uses: katyo/publish-crates@v2
-        with:
-          args: --registry cscherr
+        run: |
+            cargo workspaces publish --registry cscherr skip
