--- a/members/libpt-hedu/Cargo.toml
+++ b/members/libpt-hedu/Cargo.toml
@@ -17,5 +17,5 @@ categories.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-libpt-log = { version = "0.2.5", path = "../libpt-log" }
-libpt-bintols = { version = "0.2.5", path = "../libpt-bintols" }
+libpt-log = { version = "0.2.6-alpha.0", path = "../libpt-log" }
+libpt-bintols = { version = "0.2.6-alpha.0", path = "../libpt-bintols" }
