--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ categories = [
 [workspace.dependencies]
 anyhow = "1.0.79"
 thiserror = "1.0.56"
-libpt-log = { version = "0.2.0-alpha.1", path = "../libpt-log" }
-libpt-bintols = { version = "0.2.0-alpha.1", ath = "../libpt-bintols" }
+libpt-log = { version = "0.2.0-alpha.2", path = "../libpt-log" }
+libpt-bintols = { version = "0.2.0-alpha.2", ath = "../libpt-bintols" }
 
 [package]
 name = "libpt"
@@ -71,10 +71,10 @@ crate-type = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libpt-bintols = { version = "0.2.0-alpha.1", path = "members/libpt-bintols" }
-libpt-core = { version = "0.2.0-alpha.1", path = "members/libpt-core" }
-libpt-hedu = { version = "0.2.0-alpha.1", path = "members/libpt-hedu" }
-libpt-log = { version = "0.2.0-alpha.1", path = "members/libpt-log" }
-libpt-math = { version = "0.2.0-alpha.1", path = "members/libpt-math" }
-libpt-ccc = { version = "0.2.0-alpha.1", path = "members/libpt-ccc" }
-libpt-net = { version = "0.2.0-alpha.1", path = "members/libpt-net" }
+libpt-bintols = { version = "0.2.0-alpha.2", path = "members/libpt-bintols", registry="cscherr"}
+libpt-core = { version = "0.2.0-alpha.2", path = "members/libpt-core", registry="cscherr" }
+libpt-hedu = { version = "0.2.0-alpha.2", path = "members/libpt-hedu", registry="cscherr" }
+libpt-log = { version = "0.2.0-alpha.2", path = "members/libpt-log", registry="cscherr" }
+libpt-math = { version = "0.2.0-alpha.2", path = "members/libpt-math", registry="cscherr" }
+libpt-ccc = { version = "0.2.0-alpha.2", path = "members/libpt-ccc", registry="cscherr" }
+libpt-net = { version = "0.2.0-alpha.2", path = "members/libpt-net", registry="cscherr" }
