--- a/members/libpt-math/Cargo.toml
+++ b/members/libpt-math/Cargo.toml
@@ -15,3 +15,7 @@ categories.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num = "0.4.1"
+num-traits = "0.2.16"
+libpt-core = { workspace = true }
+libpt-log = { workspace = true }
