--- a/.gitea/workflows/cargo.yaml
+++ b/.gitea/workflows/cargo.yaml
@@ -1,4 +1,4 @@
-name: Cargo Check, Format, Fix and Test
+name: cargo devel CI
 on:
   push:
     branches:
@@ -22,11 +22,11 @@ jobs:
       - name: config custom registry
         run: |
           mkdir -p ~/.cargo/
-          echo -e '[registry]\n\
-          cscherr= "cscherr"\n\
-
-          [registries.cscherr]\n\
-          index = "sparse+https://git.cscherr.de/api/packages/PlexSheep/cargo/"' > ~/.cargo/config.toml
+          echo "" > ~/.cargo/config.toml
+          echo "[registry]" >> ~/.cargo/config.toml
+          echo 'cscherr = "cscherr"' >> ~/.cargo/config.toml
+          echo '[registries.cscherr]' >> ~/.cargo/config.toml
+          echo 'index = "https://git.cscherr.de/PlexSheep/_cargo-index.git"' >> ~/.cargo/config.toml
           cat ~/.cargo/config.toml
       - name: cargo check
         run: cargo check --all-features --all-targets
