--- a/.gitea/workflows/cargo-publish.yaml
+++ b/.gitea/workflows/cargo-publish.yaml
@@ -4,28 +4,27 @@ on:
     branches:
       - master
 
-#jobs:
-#  format:
-#    name: cargo CI
-#    permissions:
-#      # Give the default GITHUB_TOKEN write permission to commit and push the
-#      # added or changed files to the repository.
-#      contents: write
-#    steps:
-#      - name: get repo
-#        uses: actions/checkout@v4
-#      - name: install rust
-#        uses: dtolnay/rust-toolchain@stable
-#      - name: config custom registry
-#        run: |
-#          mkdir -p ~/.cargo/
-#          echo -e '[registry]
-#          cscherr= "cscherr"
-#
-#          [registries.cscherr]
-#          index = "sparse+https://git.cscherr.de/api/packages/PlexSheep/cargo/"
-#          ' > ~/.cargo/config.toml
-#          cat ~/.cargo/config.toml
-#      - name: publish crates on git.cscherr.de
-#        run: |
-#            cargo workspaces publish --registry cscherr
+jobs:
+  format:
+    name: cargo CI
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+    steps:
+      - name: get repo
+        uses: actions/checkout@v4
+      - name: install rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: config custom registry
+        run: |
+          mkdir -p ~/.cargo/
+          echo "" > ~/.cargo/config.toml
+          echo "[registry]" >> ~/.cargo/config.toml
+          echo 'cscherr = "cscherr"' >> ~/.cargo/config.toml
+          echo '[registries.cscherr]' >> ~/.cargo/config.toml
+          echo 'index = "https://git.cscherr.de/PlexSheep/_cargo-index.git"' >> ~/.cargo/config.toml
+          cat ~/.cargo/config.toml
+      - name: publish crates on git.cscherr.de
+        run: |
+          cargo workspaces publish --registry cscherr
